# raff

./: README.md  pyproject.toml
raff/: __init__.py  cli.py  container.py
sniff/: __init__.py  cli.py  container.py
src/: _types.py  stream.py  utils.py
